# RAST-OS

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
src/: interrupts.rs  main.rs  memory.rs  vga_buffer.rs
